--- a/FlaskSurveyForm/templates/index.html
+++ b/FlaskSurveyForm/templates/index.html
@@ -404,7 +404,7 @@
 {% endblock %} {% endblock %} {% block scripts %}
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script src="{{ url_for('static', filename='js/form_validation.js') }}"></script>
-<script src="{{ url_for('static', filename='data/employees.js') }}"></script>{{ form.trainee_emails.label(style="position: absolute; top: -7px; width: 115.5%;") }}
+<script src="{{ url_for('static', filename='data/employees.js') }}"></script>
 <script src="{{ url_for('static', filename='js/employee_search.js') }}"></script>
 <script src="{{ url_for('static', filename='js/attachment.js') }}"></script>
 <script src="{{ url_for('static', filename='js/other_expense.js') }}"></script>
