--- a/FlaskSurveyForm/templates/index.html
+++ b/FlaskSurveyForm/templates/index.html
@@ -268,7 +268,7 @@
                                         <div class="form-floating">
                                             {{ form.other_expense_description(class="form-control",
                                             style="height: 100px", placeholder=" ") }} {{
-                                            form.other_expense_description.label }}
+                                            form.other_expense_description.label (style="position: absolute; top: -7px; width: 115%;")}}
                                         </div>
                                         <div class="form-text text-danger other-expense-required-text">
                                             * Required when other expenses are entered
