--- a/FlaskSurveyForm/templates/view.html
+++ b/FlaskSurveyForm/templates/view.html
@@ -108,7 +108,7 @@ content %}
         <!-- Expenses Section -->
         <div class="mb-4">
           <h4 class="fs-6 text-primary mb-3">Expenses Breakdown</h4>
-          <div class="row g-3">
+          <div class="row expense-row mb-4">
             <div class="col-md-3">
               <div class="card border-primary">
                 <div class="card-body">
