updated the employee search code to be reusable across different search functions. then i made a new training search function that reuses this code, to follow DRY principles.

--- a/FlaskSurveyForm/templates/index.html
+++ b/FlaskSurveyForm/templates/index.html
@@ -203,6 +203,16 @@
                             </div>
                         </div>
 
+                        <!-- Training Catalog Search (New) -->
+                        <div class="col-md-12 mb-3">
+                            <label for="training_catalog_search_input" class="form-label">Search Training Catalog (Optional)</label>
+                            <div class="catalog-search-box">
+                                <input type="text" id="training_catalog_search_input" class="form-control" placeholder="Type to search catalog by title or area...">
+                                <div id="training_catalog_search_results" class="autocomplete-results" style="display: none;"></div>
+                            </div>
+                            {{ form.training_catalog_id }} {# This will render the hidden field #}
+                        </div>
+
                         <!-- Training Description -->
                         <div class="row">
                             <div class="col-md-12 mb-3">
@@ -433,7 +443,8 @@
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script src="{{ url_for('static', filename='js/form_validation.js') }}"></script>
 <script src="{{ url_for('static', filename='data/employees.js') }}"></script>
-<script src="{{ url_for('static', filename='js/employee_search.js') }}"></script>
+<script type="module" src="{{ url_for('static', filename='js/employee_search.js') }}"></script>
+<script type="module" src="{{ url_for('static', filename='js/form_setup.js') }}"></script>
 <script src="{{ url_for('static', filename='js/attachment.js') }}"></script>
 <script src="{{ url_for('static', filename='js/other_expense.js') }}"></script>
 <script src="{{ url_for('static', filename='js/form_helpers.js') }}"></script>
